fix(Chip): fixed spacing when checkmark is provided

--- a/packages/react/src/components/Chip/Chip.module.css
+++ b/packages/react/src/components/Chip/Chip.module.css
@@ -1,5 +1,5 @@
 .spacing {
-  padding-left: var(--fds-spacing-1);
+  padding-left: var(--fds-spacing-1) !important;
 }
 
 .flexContainer {
